# rss-api

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker.yml  test.yml
tests/: test_main.py
