[project]
name = "rss-api"
version = "0.1.0"
description = "FastAPI proxy for FreshRSS Google Reader API — serves unread feed items for dashboard widgets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "humanize>=4.12.3",
    "requests>=2.32.4",
]

[dependency-groups]
dev = []
